--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "method-override": "^3.0.0",
+    "mongoose": "^5.12.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-http": "^0.3.0"
+    "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "pug": "^3.0.2"
   }
 }
